Updated Who am I?

--- a/index.html
+++ b/index.html
@@ -66,12 +66,15 @@
                 <div class="flex items-start mb-4">
                     <div class="text-3xl mr-3">👋</div>
                     <div>
-                        <h2 class="text-2xl font-semibold text-gray-800 mb-4">Who Am I?</h2>
+                        <h2 class="text-2xl font-semibold text-gray-800 mb-4">Who am I?</h2>
                         <p class="text-gray-700 leading-relaxed">
-                            Hi, I'm Anirudh Rajeev, a U.S. citizen and tech-savvy Business Analyst & AI Engineer based in San Francisco, CA. With strong expertise in Python, SQL, Power BI, and AI tools like OpenAI, LangChain, and n8n, I thrive at the intersection of data science, automation, and strategic business insights.
+                            🇺🇸 U.S. Citizen & San Francisco–based Business Analyst + AI Engineer with expertise in Python, SQL, Power BI, OpenAI, LangChain, and n8n—turning data into strategy and automation.
                         </p>
                         <p class="text-gray-700 leading-relaxed mt-4">
-                            From building predictive models that boost revenue to automating KPI tracking systems, my work translates data into impact. I've helped clients like Blue Shield of California improve reporting efficiency by 40% and led data-driven AI projects for strategic expansion at JPMorgan Chase.
+                            🚀 Boosted reporting efficiency by 40% at Blue Shield of California and built predictive models that drive profitability and performance.
+                        </p>
+                        <p class="text-gray-700 leading-relaxed mt-4">
+                            🧠 Led AI-driven market expansion strategy projects at JPMorgan Chase, combining analytics and automation to deliver actionable insights at scale.
                         </p>
                     </div>
                 </div>
