Vijay Doddappas Ediits

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <p class="text-lg text-gray-600">Business Analyst & AI Engineer</p>
                 <div class="h-1 w-16 bg-blue-500 ml-2"></div>
             </div>
-            <p class="text-gray-500 mt-2"><i class="fas fa-map-marker-alt mr-2"></i>San Francisco, CA, USA</p>
+            <p class="text-gray-500 mt-2">US Citizen</p>
         </header>
 
         <!-- Main Content -->
@@ -68,13 +68,16 @@
                     <div>
                         <h2 class="text-2xl font-semibold text-gray-800 mb-4">Who am I?</h2>
                         <p class="text-gray-700 leading-relaxed">
-                            🇺🇸 U.S. Citizen & San Francisco–based Business Analyst + AI Engineer with expertise in Python, SQL, Power BI, OpenAI, LangChain, and n8n—turning data into strategy and automation.
+                            San Francisco Bay Area based Business Analyst + AI Engineer with expertise in Python, SQL, Power BI, OpenAI, LangChain, and n8n turning data into strategy and automation.
                         </p>
                         <p class="text-gray-700 leading-relaxed mt-4">
-                            🚀 Boosted reporting efficiency by 40% at Blue Shield of California and built predictive models that drive profitability and performance.
+                            Boosted reporting efficiency by 40% at Blue Shield of California and built predictive models that drive profitability and performance (UCI).
                         </p>
                         <p class="text-gray-700 leading-relaxed mt-4">
-                            🧠 Led AI-driven market expansion strategy projects at JPMorgan Chase, combining analytics and automation to deliver actionable insights at scale.
+                            Led AI-driven market expansion strategy projects for JPMorgan Chase, combining analytics and automation to deliver actionable insights at scale (UCI).
+                        </p>
+                        <p class="text-gray-700 leading-relaxed mt-4">
+                            US Citizen 
                         </p>
                     </div>
                 </div>
@@ -113,11 +116,11 @@
                         </div>
                         <div>
                             <p class="text-gray-800 font-medium">NLP-Powered Job Recommendation Engine</p>
-                            <p class="text-gray-600">Boosted accuracy by 30% using text mining and resume parsing in Python and R.</p>
+                            <p class="text-gray-600">Boosted accuracy by 30% using text mining and résumé parsing in Python and R.</p>
                         </div>
                         <div>
                             <p class="text-gray-800 font-medium">Strategic Banking Expansion (JPMorgan EDGE Project)</p>
-                            <p class="text-gray-600">Led analytics and visualization for 500+ branch recommendations using Tableau and Excel.</p>
+                            <p class="text-gray-600">Led a team to envision future banking sinarios, combining sinario planning and perdictive modeling</p>
                         </div>
                         <div>
                             <p class="text-gray-800 font-medium">AI Automation for Document Processing</p>
@@ -130,7 +133,7 @@
                     <h3 class="text-xl font-medium text-gray-700 mb-2">Technical Skills</h3>
                     <div class="space-y-4">
                         <div>
-                            <h4 class="font-medium text-gray-700 mb-1">Languages/Tools:</h4>
+                            <h4 class="font-medium text-gray-700 mb-1">Languages & Tools:</h4>
                             <div class="flex flex-wrap gap-2">
                                 <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm">Python</span>
                                 <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm">R</span>
@@ -139,11 +142,12 @@
                                 <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm">Airflow</span>
                                 <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm">Arduino</span>
                                 <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm">DevOps</span>
+                                 <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm">GitHub</span>
                             </div>
                         </div>
                         
                         <div>
-                            <h4 class="font-medium text-gray-700 mb-1">AI/Automation:</h4>
+                            <h4 class="font-medium text-gray-700 mb-1">AI & Automation:</h4>
                             <div class="flex flex-wrap gap-2">
                                 <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm">LangChain</span>
                                 <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm">HuggingFace</span>
@@ -151,6 +155,7 @@
                                 <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm">Zapier</span>
                                 <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm">n8n</span>
                                 <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm">Pinecone</span>
+                                <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm">Prompt Enginnering</span>
                             </div>
                         </div>
                         
@@ -161,8 +166,7 @@
                                 <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm">Tableau</span>
                                 <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm">GSuite</span>
                                 <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm">Excel</span>
-                                <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm">Sheets</span>
-                                <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm">GitHub</span>
+                                <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm"></span>
                             </div>
                         </div>
                     </div>
