--- a/index.html
+++ b/index.html
@@ -53,11 +53,9 @@
     <div class="container mx-auto px-4 py-8 max-w-4xl">
         <!-- Header -->
         <header class="text-center mb-12">
-            <h1 class="text-4xl md:text-5xl font-bold text-gray-800 mb-2">Anirudh Rajeev</h1>
+            <h1 class="text-4xl md:text-5xl font-bold text-gray-800 mb-2">Ani Rajeev</h1>
             <div class="flex justify-center items-center">
-                <div class="h-1 w-16 bg-blue-500 mr-2"></div>
                 <p class="text-lg text-gray-600">Business Analyst & AI Engineer</p>
-                <div class="h-1 w-16 bg-blue-500 ml-2"></div>
             </div>
             <p class="text-gray-500 mt-2">US Citizen</p>
         </header>
@@ -71,13 +69,14 @@
                     <div>
                         <h2 class="text-2xl font-semibold text-gray-800 mb-4">Who am I?</h2>
                         <p class="text-gray-700 leading-relaxed">
-                            San Francisco Bay Area based Business Analyst + AI Engineer with expertise in Python, SQL, Power BI, OpenAI, LangChain, and n8n turning data into strategy and automation.
+                            • San Francisco Bay Area based  Business Analyst + AI Engineer with expertise in Python, SQL, Power BI, OpenAI, LangChain
+                             and n8n turning data into strategy and automation.
                         </p>
                         <p class="text-gray-700 leading-relaxed mt-4">
-                            Boosted reporting efficiency by 40% at Blue Shield of California and built predictive models that drive profitability and performance (UCI).
+                            • Boosted reporting efficiency by 40% at Blue Shield of California and built predictive models that drive profitability and performance (UCI).
                         </p>
                         <p class="text-gray-700 leading-relaxed mt-4">
-                            Led AI-driven market expansion strategy projects for JPMorgan Chase, combining analytics and automation to deliver actionable insights at scale (UCI).
+                            • Led AI-driven market expansion strategy projects for JPMorgan Chase, combining analytics and automation to deliver actionable insights at scale (UCI).
                         </p>
                     </div>
                 </div>
@@ -112,7 +111,7 @@
                     <div class="pl-4 border-l-2 border-blue-200 space-y-4">
                         <div>
                             <p class="text-gray-800 font-medium">Predictive Restaurant Revenue Forecasting</p>
-                            <p class="text-gray-600">Built regression and ensemble models that increased R² from 0.53 to 0.81.</p>
+                            <p class="text-gray-600">Increased R² value form 0.53 to 0.81 using regrassion and ensable models.</p>
                         </div>
                         <div>
                             <p class="text-gray-800 font-medium">NLP-Powered Job Recommendation Engine</p>
@@ -120,11 +119,11 @@
                         </div>
                         <div>
                             <p class="text-gray-800 font-medium">Strategic Banking Expansion (JPMorgan EDGE Project)</p>
-                            <p class="text-gray-600">Led a team to envision future banking scenarios, combining scenario planning and predictive modeling</p>
+                            <p class="text-gray-600">Led a team to envision future banking scenarios, combining scenario planning and predictive modeling.</p>
                         </div>
                         <div>
                             <p class="text-gray-800 font-medium">AI Automation for Document Processing</p>
-                            <p class="text-gray-600">Built NLP pipelines using OpenAI and LangChain to reduce manual work by 30%.</p>
+                            <p class="text-gray-600">Reduced manual work by 30% by building NLP pipelines(Open AI and LangChain). </p>
                         </div>
                     </div>
                 </div>
@@ -149,13 +148,13 @@
                         <div>
                             <h4 class="font-medium text-gray-700 mb-1">AI & Automation:</h4>
                             <div class="flex flex-wrap gap-2">
+                                <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm">Prompt Engineering</span>
                                 <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm">LangChain</span>
                                 <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm">HuggingFace</span>
                                 <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm">AutoGen</span>
                                 <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm">Zapier</span>
                                 <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm">n8n</span>
                                 <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm">Pinecone</span>
-                                <span class="skill-pill bg-gray-100 px-3 py-1 rounded-full text-sm">Prompt Engineering</span>
                             </div>
                         </div>
                         
