--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <div class="pl-4 border-l-2 border-blue-200 space-y-4">
                         <div>
                             <p class="text-gray-800 font-medium">Predictive Restaurant Revenue Forecasting</p>
-                            <p class="text-gray-600">Increased R² value form 0.53 to 0.81 using regrassion and ensable models.</p>
+                            <p class="text-gray-600">Increased R² value from 0.53 to 0.81 using regression and ensemble models.</p>
                         </div>
                         <div>
                             <p class="text-gray-800 font-medium">NLP-Powered Job Recommendation Engine</p>
@@ -123,7 +123,7 @@
                         </div>
                         <div>
                             <p class="text-gray-800 font-medium">AI Automation for Document Processing</p>
-                            <p class="text-gray-600">Reduced manual work by 30% by building NLP pipelines(Open AI and LangChain). </p>
+                            <p class="text-gray-600">Reduced manual work by 30% by building NLP pipelines(OpenAI and LangChain). </p>
                         </div>
                     </div>
                 </div>
