--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
                         <p class="text-gray-700 leading-relaxed mt-4">
                             • Led AI-driven market expansion strategy projects for JPMorgan Chase, combining analytics and automation to deliver actionable insights at scale (UCI).
                         </p>
+                        <p class="text-gray-700 leading-relaxed mt-4">
+                            • Passionate about data by day and downhill trails by weekend.
+                        </p>
                     </div>
                 </div>
             </section>
@@ -123,7 +126,7 @@
                         </div>
                         <div>
                             <p class="text-gray-800 font-medium">AI Automation for Document Processing</p>
-                            <p class="text-gray-600">Reduced manual work by 30% by building NLP pipelines(OpenAI and LangChain). </p>
+                            <p class="text-gray-600">Reduced manual work by 30% by building NLP pipelines (OpenAI and LangChain). </p>
                         </div>
                     </div>
                 </div>
