--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
         <!-- Header -->
         <header class="text-center mb-12">
             <h1 class="text-4xl md:text-5xl font-bold text-gray-800 mb-2">Ani Rajeev</h1>
-            <div class="flex justify-center items-center">
-                <p class="text-lg text-gray-600">Business Analyst & AI Engineer</p>
+            <div class="flex flex-col items-center">
+                <p class="text-lg text-gray-600">Business Analyst</p>
+                <p class="text-lg text-gray-600">Passionate about Data-Driven AI</p>
             </div>
             <p class="text-gray-500 mt-2">US Citizen</p>
         </header>
